--- a/UI/sections/ImagesSection/styles/separate-us.scss
+++ b/UI/sections/ImagesSection/styles/separate-us.scss
@@ -1,7 +1,7 @@
 .separate-us {
-  padding: 60px 0;
+  padding: 60px 0 120px;
 
   @include phone {
-    padding: 30px 0;
+    padding: 30px 0 60px;
   }
 }
